--- a/CallingClientCpp/CallingClientCpp.vcxproj
+++ b/CallingClientCpp/CallingClientCpp.vcxproj
@@ -72,8 +72,8 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <LibraryPath>C:\Users\charl\source\repos\ExampleAPI\Debug;$(LibraryPath)</LibraryPath>
-    <IncludePath>C:\Users\charl\source\repos\ExampleAPI\Debug;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)$(Configuration);$(LibraryPath)</LibraryPath>
+    <IncludePath>$(SolutionDir)ExampleAPI;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
