Got unity running wrapper code

--- a/.gitignore
+++ b/.gitignore
@@ -336,3 +336,9 @@ ASALocalRun/
 
 # Local History for Visual Studio
 .localhistory/
+
+New Unity Project/Library/
+
+New Unity Project/Temp/
+
+New Unity Project/Build/
